// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders a bus component 1`] = `
<div
  className="m-schedule-direction"
>
  <div
    className="m-schedule-direction__direction"
    id="direction-name"
  >
    Inbound
  </div>
  <div
    className="js-m-schedule-click-boundary"
  >
    <div
      className="m-schedule-direction__route-pattern"
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      Pattern 2
       
    </div>
  </div>
  <button
    className="m-schedule-direction__button btn btn-primary"
    onClick={[Function]}
    type="button"
  >
    <span
      aria-hidden="true"
      className="notranslate m-schedule-direction__icon"
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
    Change Direction
  </button>
</div>
`;

exports[`it renders a subway component 1`] = `
<div
  className="m-schedule-direction"
>
  <div
    className="m-schedule-direction__direction"
    id="direction-name"
  >
    Inbound
  </div>
  <div
    className="js-m-schedule-click-boundary"
  >
    <div
      className="m-schedule-direction__route-pattern"
    >
      End
    </div>
  </div>
  <button
    className="m-schedule-direction__button btn btn-primary"
    onClick={[Function]}
    type="button"
  >
    <span
      aria-hidden="true"
      className="notranslate m-schedule-direction__icon"
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
    Change Direction
  </button>
</div>
`;
